# chrome-trex-rush

./: .gitignore  .pre-commit-config.yaml  README.md  dinogame.py  pyproject.toml  setup.py
chrome_trex/: __init__.py  constants.py  dinogame.py  helpers.py
chrome_trex/core/: dino_game.py  multi_dino_game.py
chrome_trex/core/objects/: cactus.py  cloud.py  dino.py  ground.py  ptera.py  scoreboard.py
