[tool.poetry]
name = "chrome-trex"
version = "0.3.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [
    { include = "chrome_trex" }
]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
